# dotfiles

./: .bash_profile  .bashrc  .chezmoi.toml.tmpl  .chezmoiignore  .chezmoiroot  .editorconfig  .flake8  .gitattributes  .gitconfig  .gitignore  .gitignore_global  .gitmessage  .gitmodules  .inputrc  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .pylintrc  .textlintignore  .textlintrc.yaml  .tmux.conf  .vimrc  .xonshrc  AGENTS.md  CLAUDE.base.md  CLAUDE.md  CLAUDE.project.md  Makefile  PSScriptAnalyzerSettings.psd1  README.md  _typos.toml  configuration.dsc.yaml  deploy.bat  deploy.sh  dot_bashrc  dot_tmux.conf  dot_vimrc  install-claude.ps1  install-claude.sh  install.ps1  install.sh  (+11 more)
.agents/plugins/: marketplace.json
.chezmoi-source/: .chezmoi.toml.tmpl  .chezmoiignore  dot_bash_profile  dot_bashrc  dot_screenrc  dot_sqliterc  dot_tmux.conf  dot_vimrc  run_after_post-apply-windows.ps1.tmpl  run_after_post-apply.sh.tmpl  run_after_supply-chain-npm-windows.ps1.tmpl  run_after_supply-chain-npm.sh.tmpl  run_onchange_after_pytools-windows.ps1.tmpl  run_onchange_after_pytools.sh.tmpl  run_onchange_after_ssh-config-windows.ps1.tmpl
.chezmoi-source/dot_claude/: .markdownlint-cli2.yaml  CLAUDE.md
.chezmoi-source/dot_codex/: AGENTS.md
.chezmoi-source/dot_config/: bandit.yml
.claude/: .markdownlint-cli2.yaml  CLAUDE.md  settings.json
.claude-plugin/: marketplace.json
.claude/rules/: agent-toolkit.md  agent.md  hooks.md  markdown.md  plugins.md  python-test.md  python.md  stop-review.md  typescript-test.md
.codex/: instructions.md
.config/: bandit.yml  flake8  pep8  pylintrc
.config/git/: config  ignore
.config/mypy/: config
.config/nautilus/: desktop-metadata
.config/xonsh/: rc.xsh
.config/yamllint/: config
.config/yapf/: style
.github/workflows/: ci.yaml  release-statusline.yaml  test.yml
.ssh/: authorized_keys  config  known_hosts.old
.ssh/conf.d/: 10_main.conf
.tmuxinator/: .gitignore  c.yml  g.yml  gg.yml
.vim/ftplugin/: cpp.vim  java.vim  php.vim
agent-toolkit/.claude-plugin/: plugin.json
agent-toolkit/.codex-plugin/: plugin.json
agent-toolkit/agents/: agent-doc-validator.md  careful-impl-reviewer.md  careful-implementer.md  careful-spec-reviewer.md  naive-executor.md  plan-codex-delegate.md  plan-codex-implementer.md  plan-codex-reviewer.md  plan-file-creator.md  plan-impl-executor.md  (+7 more)
completions/: _pytools.bash  sshr.bash
docs/: agent-learned.md  chezmoi-usage.md  claude-code-concept.md  claude-code.md  development.md  index.md  pytools.md  security.md  ssh-config.md
dot_claude/: CLAUDE.md  modify_settings.json
plugins/: agent-toolkit
pytools/: _cleanup_paths.py  _install_claude_plugins.py  _install_codex_mcp.py  _install_libarchive_windows.py  _log_format.py  _setup_mise.py  _setup_plans_viewer_windows.py  _update_claude_settings.py  _update_npmrc.py  _update_vscode_settings.py  _winutils.py  check_image_sizes.py  claude_commit.py  claude_commit_test.py  claude_plans_viewer.py  claude_plans_viewer_remote_helper_test.py  claude_plans_viewer_remote_host_test.py  claude_plans_viewer_remote_test_helpers.py  claude_plans_viewer_remote_watcher_test.py  claude_plans_viewer_server_test.py  claude_plans_viewer_test.py  claude_session_export.py  claude_session_export_test.py  claudize.py  claudize_test.py  clonedir.py  codexize.py  codexize_test.py  colloquial_checker.py  date_relocator.py  delete_homonym.py  dirsize.py  ecoutilities.py  ecoutilities_test.py  git_justify.py  imageconverter.py  imageconverter_test.py  install_claude_plugins.py  media_remote_test.py  mvdir.py  (+20 more)
rust/claude-statusline/: Cargo.toml
rust/claude-statusline/src/: balance_mode.rs  main.rs  statusline.rs  subagent.rs
scripts/: agent_toolkit_bump.py  agent_toolkit_bump_test.py  check-cmd-encoding  check-cmd-encoding.sh  check-ps1-bom.sh  check-templates  check-templates.sh  claude_hook_autonomous_exit.py  claude_hook_autonomous_exit_test.py  claude_hook_call_formatter.py  claude_hook_check_mojibake.py  claude_hook_check_ps1_eol.py  claude_hook_permissionrequest.py  claude_hook_permissionrequest_test.py  claude_hook_posttooluse.py  claude_hook_posttooluse_test.py  claude_hook_pretooluse.py  claude_hook_pretooluse_bash_test.py  claude_hook_pretooluse_plan_file_test.py  claude_hook_pretooluse_test.py  claude_hook_stop.py  claude_hook_stop_test.py  claude_status_line.py  claude_status_line_test.py  claude_subagent_status_line.py  claude_subagent_status_line_test.py  dotfiles-setup.ps1  gen-completions.py  gen-completions_test.py  gen-install-files.py  gen-install-files_test.py  keep-awake.ps1  mvdir.py  new-bin-cmd.py  run-psscriptanalyzer  run-psscriptanalyzer.sh  sync_codex_plugin_manifests.py  sync_codex_plugin_manifests_test.py
share/: claude_config_managed.json  claude_json_managed.json  claude_settings_json_managed.json  claude_settings_json_managed.posix.json  claude_settings_json_managed.win32.json  claude_settings_managed.json  user.env
tests/: _cleanup_paths_test.py  _install_claude_plugins_auto_manage_test.py  _install_claude_plugins_repair_test.py  _install_claude_plugins_test.py  _install_codex_mcp_test.py  _log_format_test.py  _setup_mise_test.py  _update_claude_settings_test.py  _update_npmrc_test.py  _update_vscode_settings_test.py  claude_commit_test.py  claude_hook_call_formatter_test.py  claude_hook_check_mojibake_test.py  claude_hook_check_ps1_eol_test.py  claude_hook_pretooluse_test.py  claude_hook_stop_test.py  claude_marketplace_test.py  claude_plans_viewer_test.py  claude_session_export_test.py  claudize_test.py  cleanup_paths_test.py  cleanup_user_path_test.py  helpers.py  imageconverter_test.py  install_claude_plugins_auto_manage_test.py  install_claude_plugins_repair_test.py  install_claude_plugins_test.py  install_claude_test.py  install_codex_mcp_test.py  install_test.py  log_format_test.py  post_apply_test.py  rename_test.py  repack_archive_test.py  restart_plans_viewer_linux_test.py  setup_mise_test.py  setup_plans_viewer_linux_test.py  setup_registry_test.py  setup_winget_dsc_test.py  update_claude_settings_test.py  (+3 more)
(+568 files in other folders)
