[project]
name = "pytools"
version = "0.1.0"
description = "Personal command-line tools"
requires-python = ">=3.12"
dependencies = [
    "bashplotlib",
    "businesstimedelta",
    "holidays",
    "httpx",
    "libarchive-c",
    "markdown-it-py>=4.0.0",
    "natsort",
    "numpy",
    "pdf2image",
    "pillow",
    "psutil",
    "pydantic>=2",
    "pyyaml",
    "send2trash",
    "tqdm",
    "watchdog>=6.0.0",
    "zstandard",
]

[project.optional-dependencies]
repack-png = ["wand"]

[project.scripts]
check-image-sizes = "pytools.check_image_sizes:_main"
claude-commit = "pytools.claude_commit:_main"
claude-plans-viewer = "pytools.claude_plans_viewer:_main"
claude-session-export = "pytools.claude_session_export:_main"
claudize = "pytools.claudize:_main"
clonedir = "pytools.clonedir:_main"
dateRelocator = "pytools.date_relocator:_main"
deletehomonym = "pytools.delete_homonym:_main"
dirsize = "pytools.dirsize:_main"
dotfiles-post-apply = "pytools.post_apply:_main"
git-justify = "pytools.git_justify:_main"
mvdir = "pytools.mvdir:_main"
psgrep = "pytools.psgrep:_main"
py-imageconverter = "pytools.imageconverter:_main"
py-pdf-to-image = "pytools.pdf_to_image:_main"
py-rename = "pytools.rename:_main"
py-rmdirs = "pytools.rmdirs:_main"
randfile = "pytools.randfile:_main"
regExport = "pytools.reg_export:_main"
rename2hash = "pytools.rename2hash:_main"
repack-archive = "pytools.repack_archive:_main"
runAsAdmin = "pytools.run_as_admin:_main"
update-ssh-config = "pytools.update_ssh_config:_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyfltr[python]>=3.3.0",
    "pytest-xdist>=3.8.0",
    "types-PyYAML",
]

[tool.pyfltr]
preset = "latest"
python = true
ty = true
pylint-args = ["--jobs=4"]
shellcheck = true
shfmt = true
extend-exclude = ["*/profile_ipy/*", "*.cmd"]
shfmt-extend-targets = ["*.sh.tmpl", "dot_bashrc", "dot_bash_profile", "executable_*"]
shellcheck-extend-targets = ["dot_bashrc", "dot_bash_profile", "executable_*"]
textlint-packages = [
    "textlint-rule-preset-ja-technical-writing",
    "textlint-rule-preset-jtf-style",
    "textlint-rule-ja-no-abusage",
    "textlint-rule-prh",
]

[tool.ruff]
line-length = 128

[tool.ruff.lint]
select = ["D", "E", "F", "UP", "B", "SIM", "ICN", "I"]
ignore = ["D107", "D415"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"**_test.py" = ["D"]
"**/__init__.py" = ["D104"]

[tool.mypy]
allow_redefinition = true
check_untyped_defs = true
ignore_missing_imports = true
strict_optional = true
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true

[tool.typos.default.extend-words]
# gitエイリアス名 (ba = branch --all)・CSSクラス名 (.pl-ba)
ba = "ba"
# gitエイリアス名 (aci = add-commit-in-one)
aci = "aci"
# 人名 (Antony Stubbs)
Stubbs = "Stubbs"
# IPythonの正当な用語（設定項目の複数形）
configurables = "configurables"

[tool.pytest.ini_options]
addopts = "--showlocals -p no:cacheprovider --maxfail=5 --durations=30 --durations-min=0.5 -n 4 --dist=loadfile"
log_level = "DEBUG"
xfail_strict = true
