[project]
name = "pytools"
version = "0.1.0"
description = "Personal command-line tools"
requires-python = ">=3.12,<4.0"
dependencies = [
    "argcomplete>=3.6.3",
    "bashplotlib",
    "businesstimedelta",
    "holidays",
    "httpx",
    "libarchive-c",
    "markdown-it-py>=4.0.0",
    "natsort",
    "numpy",
    "pdf2image",
    "pillow",
    "platformdirs>=4.0",
    "psutil",
    "pydantic>=2",
    "pytilpack[quart]>=1.46.0",
    "pyyaml",
    "qrcode>=8.0",
    "send2trash",
    "tqdm",
    "wand>=0.7.0",
    "watchdog>=6.0.0",
    "zstandard",
]

[project.scripts]
check-image-sizes = "pytools.check_image_sizes:main"
ccommit = "pytools.claude_commit:main"
claude-plans-viewer = "pytools.claude_plans_viewer:main"
claude-session-export = "pytools.claude_session_export:main"
claudize = "pytools.claudize:main"
clonedir = "pytools.clonedir:main"
codexize = "pytools.codexize:main"
colloquial-checker = "pytools.colloquial_checker:main"
dateRelocator = "pytools.date_relocator:main"
deletehomonym = "pytools.delete_homonym:main"
dirsize = "pytools.dirsize:main"
dotfiles-media-remote = "pytools.media_remote:main"
dotfiles-post-apply = "pytools.post_apply:main"
EcoUtilities = "pytools.ecoutilities:main"
feedback-add = "pytools.feedback_inbox_add:main"
git-justify = "pytools.git_justify:main"
markdown-viewer = "pytools.markdown_viewer:main"
mvdir = "pytools.mvdir:main"
psgrep = "pytools.psgrep:main"
py-imageconverter = "pytools.imageconverter:main"
py-pdf-to-image = "pytools.pdf_to_image:main"
py-rename = "pytools.rename:main"
py-rmdirs = "pytools.rmdirs:main"
randfile = "pytools.randfile:main"
regExport = "pytools.reg_export:main"
releaser = "pytools.releaser:main"
rename2hash = "pytools.rename2hash:main"
repack-archive = "pytools.repack_archive:main"
runAsAdmin = "pytools.run_as_admin:main"
touch-file = "pytools.touch_file:main"
update-ssh-config = "pytools.update_ssh_config:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# サプライチェーン攻撃対策: 公開直後の新バージョンは1日待ってから取り込む
exclude-newer = "1 day"

[tool.hatch.build.targets.wheel]
packages = ["pytools"]
exclude = ["pytools/**/*_test.py", "pytools/**/_test_helpers.py"]

[dependency-groups]
dev = [
    "pyfltr[python]>=3.8.0",
    "pytest-asyncio>=1.0",
    "pytest-timeout>=2",
    "pytest-xdist>=3.8.0",
    "types-PyYAML",
]

[tool.pyfltr]
preset = "latest"
python = true
ty = true
# scripts/ から agent-toolkit/scripts/ の _stop_gate モジュールを解決するため追加する
ty-args = ["check", "--output-format", "concise", "--error-on-warning", "--extra-search-path", "agent-toolkit/scripts"]
pylint-args = ["--jobs=4"]
shellcheck = true
shfmt = true
# profile_ipy/はIPython自動生成プロファイル、
# *.cmdはCP932（Shift_JIS）でpyfltrのUTF-8前提と適合せず誤検出を招くため、
# plugins/agent-toolkitはマーケットプレイス配布原本のシンボリックリンクのため検査対象外とする
extend-exclude = ["*/profile_ipy/*", "*.cmd", "plugins/agent-toolkit"]
# chezmoi命名規則（dot_*・executable_*）のshellスクリプトをshfmtの対象に追加する
shfmt-extend-targets = ["*.sh.tmpl", "dot_bashrc", "dot_bash_profile", "executable_*"]
# 上記shfmt対象と同じファイル群をshellcheckでも検査する
shellcheck-extend-targets = ["dot_bashrc", "dot_bash_profile", "executable_*"]
textlint-packages = [
    "textlint-rule-preset-ja-technical-writing",
    "textlint-rule-preset-jtf-style",
    "textlint-rule-ja-no-abusage",
    # コーディングエージェントのコンテキスト汚染対策として独自強化する辞書を追加する
    "textlint-rule-prh",
]

[tool.pylint."messages control"]
disable = [
    "broad-exception-caught",
    "duplicate-code",
    "fixme",
    "invalid-name",
    "line-too-long",
    "logging-fstring-interpolation",
    "logging-not-lazy",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "no-else-return",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-boolean-expressions",
    "too-many-branches",
    "too-many-instance-attributes",
    "too-many-locals",
    "too-many-nested-blocks",
    "too-many-positional-arguments",
    "too-many-public-methods",
    "too-many-return-statements",
    "too-many-statements",
]

[tool.ruff]
line-length = 128

[tool.ruff.lint]
select = ["D", "E", "F", "UP", "B", "SIM", "ICN", "I"]
ignore = ["D107", "D415"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"**_test.py" = ["D"]
"**/__init__.py" = ["D104"]

[tool.pyright]
# scripts/ から agent-toolkit/scripts/ の _stop_gate モジュールを import するため
# そのパスを追加する
extraPaths = ["agent-toolkit/scripts"]

[tool.mypy]
allow_redefinition = true
check_untyped_defs = true
ignore_missing_imports = true
strict_optional = true
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true

[tool.typos.default.extend-words]
# gitエイリアス名（ba = branch --all）・CSSクラス名（.pl-ba）
ba = "ba"
# gitエイリアス名（aci = add-commit-in-one）
aci = "aci"
# 人名（Antony Stubbs）
Stubbs = "Stubbs"
# IPythonの正当な用語（設定項目の複数形）
configurables = "configurables"

[tool.pytest.ini_options]
# -n 4による4プロセス並列実行で--dist=loadfileを併用し、モジュール単位でテストをworkerへ分配する。
# モジュール固有の重い初期化（fixture）をworker内で共有してテスト起動オーバーヘッドを抑える
addopts = "--showlocals -p no:cacheprovider --maxfail=5 --durations=30 --durations-min=0.5 --timeout=60 -n 4 --dist=loadfile"
log_level = "DEBUG"
xfail_strict = true
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
