[package]
name = "claude-statusline"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"
publish = false
description = "Claude Code statusLine/subagentStatusLine用CLI"

[[bin]]
name = "claude-statusline"
path = "src/main.rs"

[dependencies]
serde_json = "1"
unicode-width = "0.2"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

[profile.release]
strip = true
lto = true
